--- a/my-first-app/src/app/post2/post2.component.scss
+++ b/my-first-app/src/app/post2/post2.component.scss
@@ -1,7 +1,13 @@
 p {
-    padding: 10px;
+    padding: 10px 10px 5px;
     font-style: italic;
     font-weight: bold;
     font-size: 20px;
+    text-align: center;
     box-shadow: 0px 0px 5px gray;
+}
+
+img {
+    display: block;
+    margin: 15px auto;
 }
