--- a/my-first-app/src/app/post5/post5.component.scss
+++ b/my-first-app/src/app/post5/post5.component.scss
@@ -7,6 +7,12 @@ button {
     margin: 10px auto;
 }
 
+ul {
+    width: fit-content;
+    margin: 20px auto;
+    text-align: left;
+}
+
 .red {
     background: red;
     font-weight: bold;
