Controls creation, validation, state classes

--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -37,3 +37,18 @@ form > * {
 .form-control {
   margin: 10px;
 }
+
+input {
+  &.ng-invalid.ng-touched {
+    border: 2px solid red;
+  }
+
+  &.ng-valid.ng-touched {
+    border: 2px solid green;
+  }
+}
+
+input:focus-visible {
+  border-width: 2px;
+  outline: none;
+}
