--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -4,13 +4,13 @@
 
     <div class="form-control">
       <label>Email</label>
-      <input type="text" placeholder="Email">
+      <input type="text" placeholder="Email" formControlName="email">
       <div class="validation"></div>
     </div>
 
     <div class="form-control">
       <label>Пароль</label>
-      <input type="password" placeholder="Пароль">
+      <input type="password" placeholder="Пароль" formControlName="password">
       <div class="validation"></div>
     </div>
 
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <button class="btn" type="submit">Отправить</button>
+    <button class="btn" type="submit" [disabled]="form.invalid">Отправить</button>
 
   </form>
 </div>
