--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -38,13 +38,13 @@
       </div>
     </div>
 
-    <div class="card">
+    <div class="card" formGroupName="address">
       <h2>Адрес</h2>
 
       <div class="form-control">
         <label>Страна</label>
 
-        <select>
+        <select formControlName="country">
           <option value="ru">Россия</option>
           <option value="ua">Украина</option>
           <option value="by">Беларусь</option>
@@ -52,19 +52,24 @@
       </div>
 
       <div class="form-control">
-        <input type="text">
+        <input type="text" placeholder="Город" formControlName="city">
       </div>
 
-      <button class="btn" type="button">Выбрать столицу</button>
+      <button class="btn" type="button" (click)="setCapital()">Выбрать столицу</button>
     </div>
 
-    <div class="card">
+    <div class="card" formGroupName="skills">
       <h2>Ваши навыки</h2>
-      <button class="btn" type="button">Добавить умение</button>
-      <div class="form-control">
-        <label></label>
-        <input type="text">
+      <button class="btn" type="button" (click)="addSkill()">Добавить умение</button>
+      
+      <div 
+        class="form-control"
+        *ngFor="let control of skills.controls; let i = index"
+      >
+        <label>Умение {{i + 1}}</label>
+        <input type="text" [formControlName]="i">
       </div>
+      
     </div>
 
     <button class="btn" type="submit" [disabled]="form.invalid">Отправить</button>
