--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -16,6 +16,14 @@
         <small *ngIf="form.get('email').errors['email']">
           Введите корректный email
         </small>
+
+        <small *ngIf="form.get('email').errors['restrictedEmail']">
+          Email {{form.get('email').value}} запрещен
+        </small>
+
+        <small *ngIf="form.get('email').errors['uniqueEmail']">
+          Email {{form.get('email').value}} занят
+        </small>
       </div>
     </div>
 
@@ -35,6 +43,7 @@
           Пароль не может быть короче {{form.get('password').errors['minlength'].requiredLength}} символов<br>
           Сейчас количество символов {{form.get('password').errors['minlength'].actualLength}}
         </small>
+        
       </div>
     </div>
 
@@ -72,7 +81,7 @@
       
     </div>
 
-    <button class="btn" type="submit" [disabled]="form.invalid">Отправить</button>
+    <button class="btn" type="submit" [disabled]="form.invalid || form.pending">Отправить</button>
 
   </form>
 </div>
