--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -1,59 +1,21 @@
-h1, h2 {
-  margin-top: 5px;
+div {
+    border: 1px solid #ccc;
+    margin: 30px;
+    padding: 20px;
+    border-radius: 10px;
+  }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h2 {
-  margin-left: 10px;
-}
-
-p {
-  font-size: 1.5rem;
-}
-
-label {
-  margin-right: 5px;
+mat-form-field {
+    width: 500px;
+    margin: 10px;
 }
 
 button {
-  display: block;
-  margin: 10px;
-}
-
-form > * {
-  margin: 20px 15px;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.card {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-}
-
-.form-control {
-  margin: 10px;
-}
-
-.validation {
-  color: red;
-}
-
-input {
-  &.ng-invalid.ng-touched {
-    border: 2px solid red;
-  }
-
-  &.ng-valid.ng-touched {
-    border: 2px solid green;
-  }
-}
-
-input:focus-visible {
-  border-width: 2px;
-  outline: none;
+    margin: 10px 0px;
 }
