--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -1,21 +1,41 @@
-div {
-    border: 1px solid #ccc;
-    margin: 30px;
+h1 {
+    text-align: center;
+}
+
+.container {
+    width: 450px;
+    min-width: 310px;
+    margin: 30px auto;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 3px 2px rgba(103, 58, 183, 0.4);
+    box-sizing: border-box;
   }
+
+@media (max-width: 500px) {
+
+    .container {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+        box-shadow: none;
+    }
+}
 
 form {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    row-gap: 10px;
 }
 
 mat-form-field {
-    width: 500px;
-    margin: 10px;
+    width: 90%;
 }
 
-button {
-    margin: 10px 0px;
+.submit {
+    width: 50%;
+    height: 50px;
+    margin-bottom: 10px;
 }
