Valid fields styles & error messages display

--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -34,13 +34,19 @@ form {
     row-gap: 20px;
 }
 
-.form-field {
+mat-form-field {
     width: 90%;
 }
 
-mat-form-field {
-    width: 100%;
+mat-form-field.ng-valid:not(.mat-focused) {
+
+    & input {
+        // color: #31995c;
+        // color: #1f995c;
+        color: #1c8c54;
+    }
 }
+    
 
 .submit {
     width: 50%;
