Form component, validation fix, error messages object

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,70 +1,3 @@
 <div class="container">
-    <h1>Форма регистрации</h1>
-    <form [formGroup]="form" (ngSubmit)="submit()">
-        
-        <mat-form-field>
-            <mat-label>Имя</mat-label>
-            <input type="text" matInput formControlName="name">
-            <mat-error *ngIf="name.invalid && name.touched && name.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="name.invalid && name.touched && name.errors['maxlength']">Имя не может быть длинее 50 символов</mat-error>
-            <mat-error *ngIf="name.invalid && name.touched && name.errors['pattern']">Имя может содержать только буквы, цифры, пробелы и символы .,-'()</mat-error>
-            <mat-error *ngIf="name.invalid && name.touched && name.errors['stringContent']">Имя не может содержать только символы или пробелы</mat-error>
-            <mat-error *ngIf="name.invalid && name.touched && name.errors['stringEdges']">Имя не может начинаться/заканчиваться символом или пробелом</mat-error>        
-        </mat-form-field>
-        
-        <mat-form-field>
-            <mat-label>Фамилия</mat-label>
-            <input type="text" matInput formControlName="lastName">
-            <mat-error *ngIf="lastName.invalid && lastName.touched && lastName.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="lastName.invalid && lastName.touched && lastName.errors['maxlength']">Фамилия не может быть длинее 50 символов</mat-error>
-            <mat-error *ngIf="lastName.invalid && lastName.touched && lastName.errors['pattern']">Фамилия может содержать только буквы, цифры, пробелы и символы .,-'()</mat-error>
-            <mat-error *ngIf="lastName.invalid && lastName.touched && lastName.errors['stringContent']">Фамилия не может содержать только символы или пробелы</mat-error>
-            <mat-error *ngIf="lastName.invalid && lastName.touched && lastName.errors['stringEdges']">Фамилия не может начинаться/заканчиваться символом или пробелом</mat-error> 
-        </mat-form-field>
-        
-        <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input type="email" placeholder="inbox@mail.com" matInput formControlName="email">
-            <mat-error *ngIf="email.invalid && email.touched && email.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="email.invalid && email.touched && (email.errors['email'] || email.errors['pattern'])">Введите email в формате inbox@mail.com</mat-error>
-        </mat-form-field>
-
-        <mat-form-field>
-            <mat-label>Дата рождения</mat-label>
-            <input placeholder="01.01.2001" matInput [matDatepicker]="picker" [min]="minDate" [max]="maxDate" formControlName="birthDate">
-            <mat-hint *ngIf="birthDate.untouched">Введите дату в формате ДД.ММ.ГГГГ</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-            <mat-error *ngIf="birthDate.invalid && birthDate.touched && birthDate.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="birthDate.invalid && birthDate.touched && birthDate.errors['matDatepickerParse']">Введите дату в формате ДД.ММ.ГГГГ</mat-error>
-            <mat-error *ngIf="birthDate.invalid && birthDate.touched && birthDate.errors['matDatepickerMin']">Введите дату не ранее 01.01.1900</mat-error>
-            <mat-error *ngIf="birthDate.invalid && birthDate.touched && birthDate.errors['matDatepickerMax']">Вам должно быть не менее 18 лет</mat-error>
-        </mat-form-field>
-
-        <mat-form-field>
-            <mat-label>Пароль</mat-label>
-            <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
-            <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" type="button">
-                <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-            <mat-hint *ngIf="password.untouched">Пароль должен содержать заглавную и
-                строчную буквы, цифру и символ</mat-hint>
-            <mat-error *ngIf="password.invalid && password.touched && password.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="password.invalid && password.touched && password.errors['minlength']">Пароль должен быть не короче 8 символов</mat-error>
-            <mat-error *ngIf="password.invalid && password.touched && password.errors['requiredValue']">Пароль должен содержать <span [class.bold]="password.errors['requiredUppercaseLetter']">заглавную</span> и
-                <span [class.bold]="password.errors['requiredLowercaseLetter']">строчную</span> буквы, <span [class.bold]="password.errors['requiredNum']">цифру</span> и <span [class.bold]="password.errors['requiredSymbol']">символ</span></mat-error>
-        </mat-form-field>        
-
-        <mat-form-field>
-            <mat-label>Подтвердите пароль</mat-label>
-            <input matInput [type]="hidePasswordConfirmation ? 'password' : 'text'" formControlName="confirmPassword">
-            <button mat-icon-button matSuffix (click)="hidePasswordConfirmation = !hidePasswordConfirmation" type="button">
-                <mat-icon>{{hidePasswordConfirmation ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-            <mat-error *ngIf="confirmPassword.invalid && confirmPassword.touched && confirmPassword.errors['required']">Поле обязательно для заполнения</mat-error>
-            <mat-error *ngIf="confirmPassword.invalid && confirmPassword.touched && confirmPassword.errors['passwordMatch']">Пароли не совпадают, повторите ввод</mat-error>
-        </mat-form-field>        
-
-        <button class="submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Отправить</button>
-    </form>
+    <reg-form></reg-form>
 </div>
