Test component: get, post, delete, put requests, loading, service for http client

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
-    <reg-form></reg-form>
+    <reg-form hidden></reg-form>
+    <p>The form is hidden</p>
 </div>
+<app-test></app-test>
