--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -2,6 +2,11 @@ h1 {
     text-align: center;
 }
 
+p {
+    margin: 0;
+    text-align: center;
+}
+
 .container {
     width: 450px;
     min-width: 310px;
