POST request for form submitting

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <reg-form hidden></reg-form>
-    <p>The form is hidden</p>
+    <reg-form></reg-form>
+    <p hidden>The form is hidden</p>
 </div>
-<app-test></app-test>
+<app-test hidden></app-test>
