--- a/my-first-app/src/app/reg-form/reg-form.component.html
+++ b/my-first-app/src/app/reg-form/reg-form.component.html
@@ -1,5 +1,5 @@
-<h1>Форма регистрации</h1>
-<form [formGroup]="form" (ngSubmit)="submit()">
+<h1 *ngIf="!hideForm">Форма регистрации</h1>
+<form [formGroup]="form" (ngSubmit)="submit()" *ngIf="!hideForm; else successMessage">
     <mat-form-field>
         <mat-label>Имя</mat-label>
         <input type="text" matInput formControlName="name">
@@ -65,4 +65,7 @@
 
     <button class="submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Отправить</button>
 </form>
+<ng-template #successMessage>
+    <h1>Форма успешно отправлена!</h1>
+</ng-template>
 
