Authorization form with validation & server request

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -2,4 +2,7 @@
     <reg-form></reg-form>
     <p hidden>The form is hidden</p>
 </div>
+<div class="container">
+    <app-auth-form></app-auth-form>
+</div>
 <app-test hidden></app-test>
