--- a/my-first-app/src/app/reg-form/reg-form.component.html
+++ b/my-first-app/src/app/reg-form/reg-form.component.html
@@ -50,7 +50,7 @@
         <mat-error *ngIf="password.invalid && password.touched && password.errors['required']">{{ errorMessages['required'] }}</mat-error>
         <mat-error *ngIf="password.invalid && password.touched && password.errors['minlength']">Пароль {{ errorMessages['minLength'] }}</mat-error>
         <mat-error *ngIf="password.invalid && password.touched && password.errors['requiredValue']">Пароль должен содержать <span [class.bold]="password.errors['requiredUppercaseLetter']">заглавную</span> и
-            <span [class.bold]="password.errors['requiredLowercaseLetter']">строчную</span> буквы, <span [class.bold]="password.errors['requiredNum']">цифру</span> и <span [class.bold]="password.errors['requiredSymbol']">символ</span></mat-error>
+            <span [class.bold]="password.errors['requiredLowercaseLetter']">строчную</span> буквы, <span [class.bold]="password.errors['requiredNumber']">цифру</span> и <span [class.bold]="password.errors['requiredSymbol']">символ</span></mat-error>
     </mat-form-field>        
 
     <mat-form-field>
@@ -66,6 +66,6 @@
     <button class="submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Отправить</button>
 </form>
 <ng-template #successMessage>
-    <h1>Форма успешно отправлена!</h1>
+    <h1>Успешная регистрация</h1>
 </ng-template>
 
