Posts template component

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -5,4 +5,7 @@
 <div class="container">
     <app-auth-form></app-auth-form>
 </div>
-<app-test hidden></app-test>
+<app-test></app-test>
+<div class="container">
+    <app-posts></app-posts>
+</div>
