--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,11 +1,23 @@
+<nav class="navbar">
+  <h1>
+    <a href="#">Angular Routing</a>
+  </h1>
+  <ul>
+    <li class="active">
+      <a href="#">Home</a>
+    </li>
+    <li><a href="#">Posts</a></li>
+    <li><a href="#">About</a></li>
+    <li><button class="btn">Login</button></li>
+    <li><button class="btn">Logout</button></li>
+  </ul>
+</nav>
+
 <div class="container">
-    <reg-form></reg-form>
-    <p hidden>The form is hidden</p>
+  <div class="card">
+    <app-home></app-home>
+  </div>
 </div>
-<div class="container">
-    <app-auth-form></app-auth-form>
-</div>
-<app-test></app-test>
-<div class="container">
-    <app-posts></app-posts>
-</div>
+
+
+
