--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -1,19 +1,5 @@
-.container {
-    width: 450px;
-    min-width: 310px;
-    margin: 30px auto;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 3px 2px rgba(103, 58, 183, 0.4);
-    box-sizing: border-box;
-  }
-
-@media (max-width: 500px) {
-
-    .container {
-        width: 100%;
-        margin: 0;
-        border-radius: 0;
-        box-shadow: none;
-    }
+p {
+  font-size: 1.5rem;
 }
+
+
