--- a/my-first-app/src/app/posts/posts.component.html
+++ b/my-first-app/src/app/posts/posts.component.html
@@ -1,10 +1,17 @@
-<h1>Список постов</h1>
-<ul>
-    <li>Пост 1</li>
-    <li>Пост 2</li>
-    <li>Пост 3</li>
-    <li>Пост 4</li>
-    <li>Пост 5</li>
-    <li>Пост 6</li>
-    <li>Пост 7</li>
-</ul>
+<h1>Posts page</h1>
+
+<button class="btn">
+  Show Ids
+</button>
+<button class="btn">
+  Show Ids (program)
+</button>
+
+<div class="card" *ngFor="let post of postsService.posts">
+  <h4>
+    <a href="#">
+      <strong>(ID {{post.id}})</strong>
+      {{post.title}}
+    </a>
+  </h4>
+</div>
