--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -1,3 +1,27 @@
+h1 {
+    text-align: center;
+}
+
+ul.menu {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 0px 0px 10px;
+    padding: 20px;
+    box-shadow: 0px 2px 3px 2px rgba(103, 58, 183, 0.4);
+    font-size: 1.2rem;
+}
+
+.menu li {
+    list-style-type: none;
+    cursor: pointer;
+}
+
+.active {
+    color:#673ab7;
+}
+
 .container {
     width: 450px;
     min-width: 310px;
